common/app/assets/stylesheets/module/_lightbox-gallery.scss
@charset "UTF-8";

.gallery {
    position: relative;
    margin-bottom: $baseline * 6;
}

i.gallery__watermark {
    display: none;
    position: absolute;
    top: $baseline * 2;
    left: $gutter;

    @media (min-width: $tablet) {
        display: block;
    }
}

.gallery--hide-furniture {
    .gallery__nav .gallery-arrow-cta,
    .gallery__watermark,
    .gallerycaption  {
        display: none;
    }

}

.gallery-item {
    cursor: pointer;
}

/* ==========================================================================
   Thumbnail/Single Full image modes
   ========================================================================== */

$thumbnailOuterWidth: 156px; // 140px + 16px margins

@function gridContainerWidth($n-thumbnails) {
    @return $n-thumbnails * $thumbnailOuterWidth;
}

@function viewportWidth($n-thumbnails) {
    $gridContainerWidth: gridContainerWidth($n-thumbnails);
    @return $gridContainerWidth;
}


.gallery--grid-mode {

    .gallery__watermark,
    .gallerycaption,
    .captioncontrol.captioncontrol--show,
    .gallery__nav {
        display: none;
    }

    .gallery-item {
        float: left;
        margin: $gutter / 2;
    }

    .gallery-item--portrait {
        @include fix-aspect-ratio(3, 4, 140px);
    }

    .gallery-item--landscape {
        @include fix-aspect-ratio(5, 3, 140px);
    }

    .gallery__img {
        position: absolute;
    }

    .gallery__images {
        margin-left: auto;
        margin-right: auto;
        overflow: hidden;
    }

    // This sets a fixed width to the gallery container, so it can be centered
    @for $i from 2 through 8 {
        @media (min-width: viewportWidth($i)) {
            .gallery__images {
                width: gridContainerWidth($i);
            }
        }
    }
}


.gallery--fullimage-mode {
    .gallery-item {
        display: none;
        text-align: center;
    }

    @media (orientation:landscape) {
        .gallery__img {
            margin: 0 auto;
        }
    }
}



/* ==========================================================================
   Image container
   ========================================================================== */
.gallery__img {
    width: 100%;
    margin-bottom: 0;
}


/* ==========================================================================
   Navigation
   ========================================================================== */
.gallery__nav {
    width: 70px;
    height: 100%;
    display: block;
    position: absolute;
    top: 0;
    border: 0;
    z-index: 50;
    -ms-touch-action: none;
    -webkit-tap-highlight-color: rgba(255, 255, 255, 0);

    &,
    &:active,
    &:focus {
        background: rgba(0,0,0,0); // Makes transparent element clickable in IE9
        outline: none;
    }

    .gallery-arrow-cta {
        position: absolute;
        top: 85px;
    }
}


.gallery__nav--prev {
    left: 0;
    width: 20%;

    .gallery-arrow-cta {
        left: $gutter;
    }
}

.gallery__nav--next {
    right: 0;
    width: 80%;

    .gallery-arrow-cta {
        right: $gutter;
    }
}


/* ==========================================================================
   Arrow CTAs
   ========================================================================== */

.gallery-arrow-cta {
    display: block;
    width: 22px;
    height: 36px;
    background: rgb(34, 34, 34);
    background: rgba(34, 34, 34, 0.90);

    .i {
        margin: 10px 8px;
    }
}

.gallery-arrow-cta--up {
    @include rotate(-90deg);
}

.gallery-arrow-cta--down {
    @include rotate(90deg);
}

.gallery-arrow-cta--left {
    @include rotate(180deg);
}

.gallery-arrow-cta--right {
    @include rotate(0deg);
}



/* ==========================================================================
   Captions
   ========================================================================== */

.gallerycaption {
    color: #aaaaaa;
    text-align: left;

    a {
        color: #ffffff;
    }

    &:before {
        display: none; // Hide the caption icon
    }

    @media (orientation:landscape) {
        position: absolute;
        right: 0;
        bottom: 0;
        left: 0;
        z-index: 60;
    }
}

.gallerycaption__inner {
    background: rgb(34, 34, 34);
    background: rgba(34, 34, 34, 0.90);
    padding: $baseline * 2 $gutter;
}

.gallerycaption__text {
    @extend %type-10;
    line-height: 16px;
    padding-bottom: $baseline * 4;
    border-bottom: 1px solid #676767;
    margin-bottom: $baseline;
}

.gallerycaption__credit {
    @extend %type-11;
    margin-bottom: 0;
    padding-bottom: $baseline;
}



/* ==========================================================================
   Caption control CTA
   ========================================================================== */

.captioncontrol {
    border: 0;
    background: transparent;
    margin: 0 auto;
    width: 100%;
    height: 29px;
    display: block;
    padding: 0;

    .gallery-arrow-cta {
        margin: 0 auto;
    }
}

.captioncontrol--show {
    display: none;

    .gallery--hide-furniture & {
        display: block;
    }

    @media (orientation:landscape) {
        position: absolute;
        bottom: 0;
    }
}


/* ==========================================================================
   Image counter
   ========================================================================== */

.gallery__counter {
    @extend %type-10;
    margin-left: 0;
    letter-spacing: -1px;
    line-height: 44px;
    color: #AAAAAA;
}

.gallery__counter--current-image {
    color: #FFFFFF;
}


/* ==========================================================================
   Swipe styles
   ========================================================================== */
.gallery--swipe {
    overflow: hidden;

    .gallery__images {
        overflow: hidden;
        position: relative;
    }
    
    .gallery-item {
        float: left;
        width: 100%;
        position: relative;
        display: block;
    }

    .gallery__nav--prev,
    .gallery__nav--next {
        display: none;
    }
}

